--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "css-modificator",
-  "version": "1.0.1",
+  "version": "2.0.1",
   "description": "This module sorts rows in CSS file.",
   "main": "css-modificator.js",
+  "bin": {
+    "css-modificator": "./bin/cli"
+  },
   "scripts": {
-    "test": "test"
+    "start": "node ./bin/cli",
+    "test": "mocha --reporter spec"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/develas/css-modificator.git"
   },
   "keywords": [
     "css-modificator"
@@ -12,7 +20,11 @@
   "author": "Vadim Gomoniuk",
   "license": "ISC",
   "dependencies": {
-    "css": "^2.2.1",
-    "jscssp": "^0.5.0"
+    "colors": "^1.1.2",
+    "commander": "^2.9.0",
+    "css": "^2.2.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.5.3"
   }
 }
